$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.90-1 (opened July 3, 2011)

	* anova.cca: failed (bug) if CCA object had rank zero. This was
	broken by the new CCA return object, where completely aliased
	constraints do not give NULL component but a zero rank component. 

	* swan: gained argument 'maxit' that can be used to restrict the
	number of beals() passes on zeros. The default is 'maxit = Inf'
	which is the old behaviour: beals() passes on zero entries
	continue until there are no zeros or the number of zeros does not
	change. Probably only 'maxit = 1' makes any sense (in addition to
	the default 'maxit = Inf'), but all values are allowed.

	* metaMDSrotate: results could be a bit off with NA in
	environmental vector and >2D solution. The starting scores must be
	orthogonal, but the initial orthogonalizing PCA was run without
	removing NA cases.

	* ordiellipse, ordihull, ordispider: will remove NA scores that
	can appear with na.action in cca/rda/capscale (and perhaps in
	other cases).

	* betadiver: argument 'index' was renamed to 'method' for
	compatibility with dist() objects. Argument 'index' is
	still recognized with a warning.

	* metaMDS: Documentation and interface adapted to monoMDS().
	Argument 'noshare' defaults to FALSE with monoMDS(), since tie
	breaking seem to handle tied maximum dissimilarities even better
	than stepacross(). For 'engine = "monoMDS"' 'noshare' defaults to
	TRUE. The 'noshare' argument now accepts logical arguments in
	addition to old numeric (FALSE worked previously because it was
	interpreted as numeric 0, but TRUE has now meaningful
	interpretation). Remove argument 'old.wa' introduced in rev280 on
	24/3/08 for backward compatibility when calculating WA scores
	started to use the same transformed data as analysed.
	 
Version 1.90-0 (closed July 3, 2011)

	* vegan now depends on the permute package for new permutation
	designs. This initially version strips out all the old "new"